--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.datasource.username=postgres
 spring.datasource.password=123456
 
 spring.jpa.open-in-view=true
+
+## Generate Data base
+##spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+##spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+##spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+spring.jpa.properties.hibernate.default_schema=gen
+
+## Properties
+forum.sectionsPageSize=2
+forum.topicsPageSize=2
+forum.commentsPageSize=2
